Add migration generator to shards
Create shards migration generator. Add constraints to shard tables.

--- a/Sharding.Web/appsettings.json
+++ b/Sharding.Web/appsettings.json
@@ -6,5 +6,23 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ShardsConnections": [
+    {
+      "Name": "FirstShard",
+      "Host": "localhost",
+      "Port": "6432",
+      "Database": "shard_one_db",
+      "Username": "shard_one_user",
+      "Password": "shard_one_password"
+    },
+    {
+      "Name": "SecondShard",
+      "Host": "localhost",
+      "Port": "7432",
+      "Database": "shard_two_db",
+      "Username": "shard_two_user",
+      "Password": "shard_two_password"
+    }
+  ]
 }
