--- a/Sharding.Data/Sharding.Data.csproj
+++ b/Sharding.Data/Sharding.Data.csproj
@@ -3,11 +3,15 @@
     <ProjectReference Include="..\Sharding.BusinessObjects\Sharding.BusinessObjects.csproj"/>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.3"/>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0"/>
-    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="5.0.0"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.4"/>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.2"/>
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.1"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.3"/>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0"/>
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="5.0.0"/>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0"/>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.4"/>
+    <PackageReference Include="System.Reflection" Version="4.3.0"/>
   </ItemGroup>
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
