--- a/Sharding.Web/appsettings.Development.json
+++ b/Sharding.Web/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=first_api_root_db;Username=first_api_root_user;Password=first_api_root_password;"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=root_db;Username=root_user;Password=root_password;"
   },
   "Logging": {
     "LogLevel": {
@@ -11,18 +11,20 @@
   },
   "ShardsConnections": [
     {
+      "Name": "FirstShard",
       "Host": "localhost",
       "Port": "6432",
-      "Database": "first_api_shard_one_db",
-      "Username": "first_api_shard_one_user",
-      "Password": "first_api_shard_one_password"
+      "Database": "shard_one_db",
+      "Username": "shard_one_user",
+      "Password": "shard_one_password"
     },
     {
+      "Name": "SecondShard",
       "Host": "localhost",
       "Port": "7432",
-      "Database": "first_api_shard_two_db",
-      "Username": "first_api_shard_two_user",
-      "Password": "first_api_shard_two_password"
+      "Database": "shard_two_db",
+      "Username": "shard_two_user",
+      "Password": "shard_two_password"
     }
   ]
 }
